--- a/day-2/index.html
+++ b/day-2/index.html
@@ -11,6 +11,7 @@
         <div class="hand hour-hand"></div>
         <div class="hand min-hand"></div>
         <div class="hand second-hand"></div>
+        <div class="circle-center"></div>
       </div>
     </div>
     <script src="./script.js"></script>
