readme.md day2 added + changes to day2 css and javascript30 homepage

--- a/index.html
+++ b/index.html
@@ -5,10 +5,45 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Document</title>
+    <link rel="stylesheet" href="./javascript30.css" />
   </head>
   <body>
+    <header>
+      <h1><a href="https://javascript30.com/">JavaScript 30</a></h1>
+      <h3>My experience with this 30 Day Vanilla JS Coding Challenge</h3>
+      <p>No Frameworks / No Compilers / No Libraries</p>
+    </header>
     <ul>
       <li><a href="./Day-1/index.html">Day 1</a></li>
+      <li><a href="./day-2/index.html">Day 2</a></li>
+      <!-- <li><a href="./day-3/index.html">Day 3</a></li>
+      <li><a href="./day-4/index.html">Day 4</a></li>
+      <li><a href="./day-5/index.html">Day 5</a></li>
+      <li><a href="./day-6/index.html">Day 6</a></li>
+      <li><a href="./day-7/index.html">Day 7</a></li>
+      <li><a href="./day-8/index.html">Day 8</a></li>
+      <li><a href="./day-9/index.html">Day 9</a></li>
+      <li><a href="./day-10/index.html">Day 10</a></li>
+      <li><a href="./day-11/index.html">Day 11</a></li>
+      <li><a href="./day-12/index.html">Day 12</a></li>
+      <li><a href="./day-13/index.html">Day 13</a></li>
+      <li><a href="./day-14/index.html">Day 14</a></li>
+      <li><a href="./day-15/index.html">Day 15</a></li>
+      <li><a href="./day-16/index.html">Day 16</a></li>
+      <li><a href="./day-17/index.html">Day 17</a></li>
+      <li><a href="./day-18/index.html">Day 18</a></li>
+      <li><a href="./day-19/index.html">Day 19</a></li>
+      <li><a href="./day-20/index.html">Day 20</a></li>
+      <li><a href="./day-21/index.html">Day 21</a></li>
+      <li><a href="./day-22/index.html">Day 22</a></li>
+      <li><a href="./day-23/index.html">Day 23</a></li>
+      <li><a href="./day-24/index.html">Day 24</a></li>
+      <li><a href="./day-25/index.html">Day 25</a></li>
+      <li><a href="./day-26/index.html">Day 26</a></li>
+      <li><a href="./day-27/index.html">Day 27</a></li>
+      <li><a href="./day-28/index.html">Day 28</a></li>
+      <li><a href="./day-29/index.html">Day 29</a></li>
+      <li><a href="./day-30/index.html">Day 30</a></li> -->
     </ul>
   </body>
 </html>
