start files day-3 + img size and readme.md title day-2 changed + javascript30 homepage

--- a/index.html
+++ b/index.html
@@ -9,7 +9,9 @@
   </head>
   <body>
     <header>
-      <h1><a href="https://javascript30.com/">JavaScript 30</a></h1>
+      <h1>
+        <a href="https://javascript30.com/">JavaScript <span>30</span> </a>
+      </h1>
       <h3>My experience with this 30 Day Vanilla JS Coding Challenge</h3>
       <p>No Frameworks / No Compilers / No Libraries</p>
     </header>
