html structure + .js organized

--- a/day-4/index.html
+++ b/day-4/index.html
@@ -2,11 +2,71 @@
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
+    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Array Cardio 💪</title>
     <link rel="stylesheet" href="./style.css" />
   </head>
   <body>
-    <p><em>Psst: have a look at the JavaScript Console</em> 💁</p>
+    <header>
+      <h1>This is an array workout!</h1>
+      <h3>Array Cardio Day 1</h3>
+      <p><em>Have a look at the JavaScript Console</em> 💁</p>
+    </header>
+    <main>
+      <div class="exercise-1">
+        <h4>Exercise 1</h4>
+        <p>
+          Filter the list of inventors for those who were born in the 1500's
+        </p>
+      </div>
+      <div class="exercise-2">
+        <h4>Exercise 2</h4>
+        <p>Give us an array of the inventors first and last names</p>
+      </div>
+      <div class="exercise-3">
+        <h4>Exercise 3</h4>
+        <p>Sort the inventors by birthdate, oldest to youngest</p>
+      </div>
+      <div class="exercise-4">
+        <h4>Exercise 4</h4>
+        <p>How many years did all the inventors live all together?</p>
+      </div>
+      <div class="exercise-5">
+        <h4>Exercise 5</h4>
+        <p>Sort the inventors by years lived</p>
+      </div>
+      <div class="exercise-6">
+        <h4>Exercise 6</h4>
+        <p>
+          Create a list of Boulevards in Paris that contain 'de' anywhere in the
+          name
+        </p>
+      </div>
+      <div class="exercise-7">
+        <h4>Exercise 7</h4>
+        <p>Sort the people alphabetically by last name</p>
+      </div>
+      <div class="exercise-8">
+        <h4>Exercise 8</h4>
+        <p>Sum up the instances of each of these (data)</p>
+      </div>
+    </main>
+    <footer>
+      <h4><em>NOTE*</em></h4>
+      <div class="stepsEx6">
+        Here's what you need to do for Exercise 6:
+        <ol>
+          <li>
+            visit
+            <a href="https://en.wikipedia.org/wiki/Category:Boulevards_in_Paris"
+              >Category: Boulevards_in_Paris</a
+            >
+          </li>
+          <li>run this code: <br /></li>
+        </ol>
+      </div>
+    </footer>
     <script src="./script.js"></script>
   </body>
 </html>
