style.css day-4

--- a/day-4/index.html
+++ b/day-4/index.html
@@ -58,12 +58,15 @@
         Here's what you need to do for Exercise 6:
         <ol>
           <li>
-            visit
+            Visit
             <a href="https://en.wikipedia.org/wiki/Category:Boulevards_in_Paris"
               >Category: Boulevards_in_Paris</a
             >
           </li>
-          <li>run this code: <br /></li>
+          <li>
+            Run this code in the console: <br />
+            <img src="./exercise-6.png" alt="" />
+          </li>
         </ol>
       </div>
     </footer>
