readme.md day-4

--- a/day-4/index.html
+++ b/day-4/index.html
@@ -65,7 +65,7 @@
           </li>
           <li>
             Run this code in the console: <br />
-            <img src="./exercise-6.png" alt="" />
+            <img src="./img/exercise-6.png" alt="" />
           </li>
         </ol>
       </div>
