--- a/day-5/index.html
+++ b/day-5/index.html
@@ -11,7 +11,7 @@
     <link rel="stylesheet" href="./style.css" />
   </head>
   <body>
-    <div class="panels">
+    <div class="panels open">
       <div class="panel panel1">
         <p>Hey</p>
         <p>Let's</p>
