html, css and readme.md day-7

--- a/day-7/index.html
+++ b/day-7/index.html
@@ -2,11 +2,35 @@
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
+    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Array Cardio 💪💪</title>
     <link rel="stylesheet" href="./style.css" />
   </head>
   <body>
-    <p><em>Psst: have a look at the JavaScript Console</em> 💁</p>
+    <header>
+      <h1>This is an array workout!</h1>
+      <h3>Array Cardio Day 2</h3>
+      <p><em>Have a look at the JavaScript Console</em> 💁</p>
+    </header>
+    <main>
+      <div class="exercise-1">
+        <h4>Exercise 1</h4>
+        <p>Is at least one person 19 or older?</p>
+      </div>
+      <div class="exercise-2">
+        <h4>Exercise 2</h4>
+        <p>Is everyone 19 or older?</p>
+      </div>
+      <div class="exercise-3">
+        <h4>Exercise 3</h4>
+        <p>Find the comment with the ID of 823423</p>
+      </div>
+      <div class="exercise-4">
+        <h4>Exercise 4</h4>
+        <p>Find the comment with the ID 823423 and delete</p>
+      </div>
+    </main>
     <script src="./script.js"></script>
   </body>
 </html>
