some additions day-7

--- a/day-7/index.html
+++ b/day-7/index.html
@@ -28,7 +28,7 @@
       </div>
       <div class="exercise-4">
         <h4>Exercise 4</h4>
-        <p>Find the comment with the ID 823423 and delete</p>
+        <p>Find the comment with the ID 823423 and delete it</p>
       </div>
     </main>
     <script src="./script.js"></script>
