step by step day-9

--- a/day-9/index.html
+++ b/day-9/index.html
@@ -5,7 +5,9 @@
     <title>Console Tricks!</title>
   </head>
   <body>
-    <p onClick="makeGreen()">×BREAK×DOWN×</p>
+    <h2>Console Tricks!</h2>
+    <p class="makeGreen" onClick="makeGreen()">×BREAK×DOWN×</p>
+    <p><em>Have a look at the JavaScript Console</em> 💁</p>
 
     <script src="./script.js"></script>
   </body>
