--- a/day-14/index.html
+++ b/day-14/index.html
@@ -3,7 +3,15 @@
   <head>
     <meta charset="UTF-8" />
     <title>JS Reference VS Copy</title>
+    <style>
+      body {
+        text-align: center;
+        background-color: lightblue;
+      }
+    </style>
   </head>
+  <h1>JavaScript Fundamentals Reference VS Copy</h1>
+  <p><em>Have a look at the JavaScript Console</em> 💁</p>
   <body>
     <script src="./script.js"></script>
   </body>
