--- a/index.html
+++ b/index.html
@@ -33,8 +33,12 @@
       <li><a href="./day-15/index.html">Day 15</a></li>
       <li><a href="./day-16/index.html">Day 16</a></li>
       <li><a href="./day-17/index.html">Day 17</a></li>
-      <!--<li><a href="./day-18/index.html">Day 18</a></li>
-      <li><a href="./day-19/index.html">Day 19</a></li>
+      <li>
+        <a href="https://github.com/melissavi08/javascript-30/tree/main/day-18"
+          >Day 18</a
+        >
+      </li>
+      <!--<li><a href="./day-19/index.html">Day 19</a></li>
       <li><a href="./day-20/index.html">Day 20</a></li>
       <li><a href="./day-21/index.html">Day 21</a></li>
       <li><a href="./day-22/index.html">Day 22</a></li>
