step by step day-20

--- a/day-20/index.html
+++ b/day-20/index.html
@@ -9,7 +9,7 @@
       }
 
       body {
-        background: #ffc600;
+        background: pink;
         font-family: "helvetica neue";
         font-weight: 200;
         font-size: 20px;
