--- a/index.html
+++ b/index.html
@@ -40,8 +40,12 @@
       </li>
       <li><a href="./day-19/index.html">Day 19</a></li>
       <li><a href="./day-20/index.html">Day 20</a></li>
-      <!--<li><a href="./day-21/index.html">Day 21</a></li>
-      <li><a href="./day-22/index.html">Day 22</a></li>
+      <li>
+        <a href="https://github.com/melissavi08/javascript-30/tree/main/day-21"
+          >Day 21</a
+        >
+      </li>
+      <!--<li><a href="./day-22/index.html">Day 22</a></li>
       <li><a href="./day-23/index.html">Day 23</a></li>
       <li><a href="./day-24/index.html">Day 24</a></li>
       <li><a href="./day-25/index.html">Day 25</a></li>
