--- a/day-25/index.html
+++ b/day-25/index.html
@@ -39,7 +39,7 @@
       </div>
     </div>
 
-    <button></button>
+    <button>Button</button>
     <script src="./script.js"></script>
   </body>
 </html>
