html and css changes + js organized

--- a/day-26/index.html
+++ b/day-26/index.html
@@ -6,7 +6,7 @@
     <link rel="stylesheet" href="./style.css" />
   </head>
   <body>
-    <h2>Cool</h2>
+    <!-- <h2>Cool</h2> -->
     <nav class="top">
       <div class="dropdownBackground">
         <span class="arrow"></span>
@@ -17,73 +17,85 @@
           <a href="#">About Me</a>
           <div class="dropdown dropdown1">
             <div class="bio">
-              <img src="https://logo.clearbit.com/wesbos.com" />
+              <img
+                src="https://www.dropbox.com/s/2ki15deyj42l6vi/MelissaVillegas.JPG?raw=1"
+              />
               <p>
-                Wes Bos sure does love web development. He teaches things like
-                JavaScript, CSS and BBQ. Wait. BBQ isn't part of web
-                development. It should be though!
+                Melissa Villegas is a Frontend Web Developer. She's currently
+                working as a Webmaster. Additionally, she is a Computer Science
+                Engineering student and a Platzi student 💚. Her specialties
+                include HTML, CSS, JavaScript, Bootstrap and Git/GitHub.
               </p>
             </div>
           </div>
         </li>
         <li>
-          <a href="#">Courses</a>
+          <a href="#">Some Projects</a>
           <ul class="dropdown courses">
             <li>
-              <span class="code">RFB</span>
-              <a href="https://ReactForBeginners.com">React For Beginners</a>
-            </li>
-            <li>
-              <span class="code">ES6</span>
-              <a href="https://ES6.io">ES6 For Everyone</a>
-            </li>
-            <li>
-              <span class="code">NODE</span>
-              <a href="https://LearnNode.com">Learn Node</a>
-            </li>
-            <li>
-              <span class="code">STPU</span>
-              <a href="https://SublimeTextBook.com">Sublime Text Power User</a>
-            </li>
-            <li>
-              <span class="code">WTF</span>
-              <a href="http://Flexbox.io">What The Flexbox?!</a>
-            </li>
-            <li>
-              <span class="code">GRID</span>
-              <a href="https://CSSGrid.io">CSS Grid</a>
-            </li>
-            <li>
-              <span class="code">LRX</span>
-              <a href="http://LearnRedux.com">Learn Redux</a>
-            </li>
-            <li>
-              <span class="code">CLPU</span>
-              <a href="http://CommandLinePowerUser.com"
-                >Command Line Power User</a
+              <span class="code">JS30</span>
+              <a href="https://melissavi08.github.io/javascript-30/"
+                >JavaScript 30</a
               >
             </li>
             <li>
-              <span class="code">MMD</span>
-              <a href="http://MasteringMarkdown.com">Mastering Markdown</a>
+              <span class="code">FM</span>
+              <a
+                href="https://melissavi08.github.io/3-column-preview-card-component/index.html"
+                >3 Column Preview Card</a
+              >
+            </li>
+            <li>
+              <span class="code">FM</span>
+              <a
+                href="https://melissavi08.github.io/nft-preview-card-component/index.html"
+                >NFT Preview Card</a
+              >
+            </li>
+            <li>
+              <span class="code">FM</span>
+              <a
+                href="https://melissavi08.github.io/product-preview-card-component/index.html"
+                >Product Preview Card</a
+              >
+            </li>
+            <li>
+              <span class="code">FM</span>
+              <a
+                href="https://melissavi08.github.io/order-summary-component/index.html"
+                >Order Ssummary</a
+              >
+            </li>
+            <li>
+              <span class="code">FM</span>
+              <a
+                href="https://melissavi08.github.io/qr-code-component/index.html"
+                >QR Code</a
+              >
             </li>
           </ul>
         </li>
         <li>
-          <a href="#">Other Links</a>
+          <a href="#">Social Media</a>
           <ul class="dropdown dropdown3">
             <li>
-              <a class="button" href="http://twitter.com/wesbos">Twitter</a>
-            </li>
-            <li>
-              <a class="button" href="http://facebook.com/wesbos.developer"
-                >Facebook</a
+              <a class="button" href="http://twitter.com/melissa_vi2"
+                >Twitter</a
               >
             </li>
-            <li><a class="button" href="http://wesbos.com">Blog</a></li>
             <li>
-              <a class="button" href="http://wesbos.com/courses"
-                >Course Catalog</a
+              <a
+                class="button"
+                href="https://www.linkedin.com/in/melissa-villegas"
+                >LinkedIn</a
+              >
+            </li>
+            <li>
+              <a class="button" href="https://github.com/melissavi08">GitHub</a>
+            </li>
+            <li>
+              <a class="button" href="https://codepen.io/melissavi08"
+                >CodePen</a
               >
             </li>
           </ul>
