deleted list elements and added challengesContainer section, added blue color + challengesContainer section display flex + challenge box css and backgound color changed

--- a/index.html
+++ b/index.html
@@ -15,45 +15,45 @@
       <h3>My experience with this 30 Day Vanilla JS Coding Challenge</h3>
       <p>No Frameworks / No Compilers / No Libraries</p>
     </header>
-    <ul>
-      <li><a href="./Day-1/index.html">Day 1</a></li>
-      <li><a href="./day-2/index.html">Day 2</a></li>
-      <li><a href="./day-3/index.html">Day 3</a></li>
-      <li><a href="./day-4/index.html">Day 4</a></li>
-      <li><a href="./day-5/index.html">Day 5</a></li>
-      <li><a href="./day-6/index.html">Day 6</a></li>
-      <li><a href="./day-7/index.html">Day 7</a></li>
-      <li><a href="./day-8/index.html">Day 8</a></li>
-      <li><a href="./day-9/index.html">Day 9</a></li>
-      <li><a href="./day-10/index.html">Day 10</a></li>
-      <li><a href="./day-11/index.html">Day 11</a></li>
-      <li><a href="./day-12/index.html">Day 12</a></li>
-      <li><a href="./day-13/index.html">Day 13</a></li>
-      <li><a href="./day-14/index.html">Day 14</a></li>
-      <li><a href="./day-15/index.html">Day 15</a></li>
-      <li><a href="./day-16/index.html">Day 16</a></li>
-      <li><a href="./day-17/index.html">Day 17</a></li>
-      <li>
+    <section class="challengesContainer">
+      <div class="challenge"><a href="./Day-1/index.html">Day 1</a></div>
+      <div class="challenge"><a href="./day-2/index.html">Day 2</a></div>
+      <div class="challenge"><a href="./day-3/index.html">Day 3</a></div>
+      <div class="challenge"><a href="./day-4/index.html">Day 4</a></div>
+      <div class="challenge"><a href="./day-5/index.html">Day 5</a></div>
+      <div class="challenge"><a href="./day-6/index.html">Day 6</a></div>
+      <div class="challenge"><a href="./day-7/index.html">Day 7</a></div>
+      <div class="challenge"><a href="./day-8/index.html">Day 8</a></div>
+      <div class="challenge"><a href="./day-9/index.html">Day 9</a></div>
+      <div class="challenge"><a href="./day-10/index.html">Day 10</a></div>
+      <div class="challenge"><a href="./day-11/index.html">Day 11</a></div>
+      <div class="challenge"><a href="./day-12/index.html">Day 12</a></div>
+      <div class="challenge"><a href="./day-13/index.html">Day 13</a></div>
+      <div class="challenge"><a href="./day-14/index.html">Day 14</a></div>
+      <div class="challenge"><a href="./day-15/index.html">Day 15</a></div>
+      <div class="challenge"><a href="./day-16/index.html">Day 16</a></div>
+      <div class="challenge"><a href="./day-17/index.html">Day 17</a></div>
+      <div class="challenge">
         <a href="https://github.com/melissavi08/javascript-30/tree/main/day-18"
           >Day 18</a
         >
-      </li>
-      <li><a href="./day-19/index.html">Day 19</a></li>
-      <li><a href="./day-20/index.html">Day 20</a></li>
-      <li>
+      </div>
+      <div class="challenge"><a href="./day-19/index.html">Day 19</a></div>
+      <div class="challenge"><a href="./day-20/index.html">Day 20</a></div>
+      <div class="challenge">
         <a href="https://github.com/melissavi08/javascript-30/tree/main/day-21"
           >Day 21</a
         >
-      </li>
-      <li><a href="./day-22/index.html">Day 22</a></li>
-      <li><a href="./day-23/index.html">Day 23</a></li>
-      <li><a href="./day-24/index.html">Day 24</a></li>
-      <li><a href="./day-25/index.html">Day 25</a></li>
-      <li><a href="./day-26/index.html">Day 26</a></li>
-      <li><a href="./day-27/index.html">Day 27</a></li>
-      <!--<li><a href="./day-28/index.html">Day 28</a></li>
-      <li><a href="./day-29/index.html">Day 29</a></li>
-      <li><a href="./day-30/index.html">Day 30</a></li> -->
-    </ul>
+      </div>
+      <div class="challenge"><a href="./day-22/index.html">Day 22</a></div>
+      <div class="challenge"><a href="./day-23/index.html">Day 23</a></div>
+      <div class="challenge"><a href="./day-24/index.html">Day 24</a></div>
+      <div class="challenge"><a href="./day-25/index.html">Day 25</a></div>
+      <div class="challenge"><a href="./day-26/index.html">Day 26</a></div>
+      <div class="challenge"><a href="./day-27/index.html">Day 27</a></div>
+      <!--<div class="challenge"><a href="./day-28/index.html">Day 28</a></div>
+      <div class="challenge"><a href="./day-29/index.html">Day 29</a></div>
+      <div class="challenge"><a href="./day-30/index.html">Day 30</a></div> -->
+    </section>
   </body>
 </html>
