challenge box day-1 css

--- a/index.html
+++ b/index.html
@@ -16,7 +16,20 @@
       <p>No Frameworks / No Compilers / No Libraries</p>
     </header>
     <section class="challengesContainer">
-      <div class="challenge"><a href="./Day-1/index.html">Day 1</a></div>
+      <div class="challenge">
+        <img src="./day-1/img/screenshot.png" alt="day1-screenshot" />
+        <div class="challengeInfo">
+          <h3>Day 1</h3>
+          <p>JavaScript Drum Kit</p>
+          <div class="challengeLinks">
+            <a href="./day-1/index.html">Demo</a>
+            <a
+              href="https://github.com/melissavi08/javascript-30/tree/main/Day-1"
+              >Source</a
+            >
+          </div>
+        </div>
+      </div>
       <div class="challenge"><a href="./day-2/index.html">Day 2</a></div>
       <div class="challenge"><a href="./day-3/index.html">Day 3</a></div>
       <div class="challenge"><a href="./day-4/index.html">Day 4</a></div>
