challenge box from day-2 to day-17

--- a/index.html
+++ b/index.html
@@ -30,22 +30,231 @@
           </div>
         </div>
       </div>
-      <div class="challenge"><a href="./day-2/index.html">Day 2</a></div>
-      <div class="challenge"><a href="./day-3/index.html">Day 3</a></div>
-      <div class="challenge"><a href="./day-4/index.html">Day 4</a></div>
-      <div class="challenge"><a href="./day-5/index.html">Day 5</a></div>
-      <div class="challenge"><a href="./day-6/index.html">Day 6</a></div>
-      <div class="challenge"><a href="./day-7/index.html">Day 7</a></div>
-      <div class="challenge"><a href="./day-8/index.html">Day 8</a></div>
-      <div class="challenge"><a href="./day-9/index.html">Day 9</a></div>
-      <div class="challenge"><a href="./day-10/index.html">Day 10</a></div>
-      <div class="challenge"><a href="./day-11/index.html">Day 11</a></div>
-      <div class="challenge"><a href="./day-12/index.html">Day 12</a></div>
-      <div class="challenge"><a href="./day-13/index.html">Day 13</a></div>
-      <div class="challenge"><a href="./day-14/index.html">Day 14</a></div>
-      <div class="challenge"><a href="./day-15/index.html">Day 15</a></div>
-      <div class="challenge"><a href="./day-16/index.html">Day 16</a></div>
-      <div class="challenge"><a href="./day-17/index.html">Day 17</a></div>
+      <div class="challenge">
+        <img src="./day-2/img/screenshot02.png" alt="day2-screenshot" />
+        <div class="challengeInfo">
+          <h3>Day 2</h3>
+          <p>JS + CSS Clock</p>
+          <div class="challengeLinks">
+            <a href="./day-2/index.html">Demo</a>
+            <a
+              href="https://github.com/melissavi08/javascript-30/tree/main/day-2"
+              >Source</a
+            >
+          </div>
+        </div>
+      </div>
+      <div class="challenge">
+        <img src="./day-3/img/screenshot03.png" alt="day3-screenshot" />
+        <div class="challengeInfo">
+          <h3>Day 3</h3>
+          <p>Live Image Editor</p>
+          <div class="challengeLinks">
+            <a href="./day-3/index.html">Demo</a>
+            <a
+              href="https://github.com/melissavi08/javascript-30/tree/main/day-3"
+              >Source</a
+            >
+          </div>
+        </div>
+      </div>
+      <div class="challenge">
+        <img src="./day-4/img/screenshot04.png" alt="day4-screenshot" />
+        <div class="challengeInfo">
+          <h3>Day 4</h3>
+          <p>Array Cardio Part 1</p>
+          <div class="challengeLinks">
+            <a href="./day-4/index.html">Demo</a>
+            <a
+              href="https://github.com/melissavi08/javascript-30/tree/main/day-4"
+              >Source</a
+            >
+          </div>
+        </div>
+      </div>
+      <div class="challenge">
+        <img src="./day-5/img/screenshot05.png" alt="day5-screenshot" />
+        <div class="challengeInfo">
+          <h3>Day 5</h3>
+          <p>Flex Panel Gallery</p>
+          <div class="challengeLinks">
+            <a href="./day-5/index.html">Demo</a>
+            <a
+              href="https://github.com/melissavi08/javascript-30/tree/main/day-5"
+              >Source</a
+            >
+          </div>
+        </div>
+      </div>
+      <div class="challenge">
+        <img src="./day-6/img/screenshot06-01.png" alt="day6-screenshot" />
+        <div class="challengeInfo">
+          <h3>Day 6</h3>
+          <p>City Search</p>
+          <div class="challengeLinks">
+            <a href="./day-6/index.html">Demo</a>
+            <a
+              href="https://github.com/melissavi08/javascript-30/tree/main/day-6"
+              >Source</a
+            >
+          </div>
+        </div>
+      </div>
+      <div class="challenge">
+        <img src="./day-7/img/screenshot07.png" alt="day8-screenshot" />
+        <div class="challengeInfo">
+          <h3>Day 7</h3>
+          <p>Array Cardio Part 2</p>
+          <div class="challengeLinks">
+            <a href="./day-7/index.html">Demo</a>
+            <a
+              href="https://github.com/melissavi08/javascript-30/tree/main/day-7"
+              >Source</a
+            >
+          </div>
+        </div>
+      </div>
+      <div class="challenge">
+        <img src="./day-8/img/screenshot08.png" alt="day8-screenshot" />
+        <div class="challengeInfo">
+          <h3>Day 8</h3>
+          <p>HTML5 Canvas</p>
+          <div class="challengeLinks">
+            <a href="./day-8/index.html">Demo</a>
+            <a
+              href="https://github.com/melissavi08/javascript-30/tree/main/day-8"
+              >Source</a
+            >
+          </div>
+        </div>
+      </div>
+      <div class="challenge">
+        <img src="./day-9/img/screenshot09.png" alt="day9-screenshot" />
+        <div class="challengeInfo">
+          <h3>Day 9</h3>
+          <p>Chrome Dev Tools</p>
+          <div class="challengeLinks">
+            <a href="./day-9/index.html">Demo</a>
+            <a
+              href="https://github.com/melissavi08/javascript-30/tree/main/day-9"
+              >Source</a
+            >
+          </div>
+        </div>
+      </div>
+      <div class="challenge">
+        <img src="./day-10/img/screenshot10.png" alt="day10-screenshot" />
+        <div class="challengeInfo">
+          <h3>Day 10</h3>
+          <p>Checking boxes using Shift</p>
+          <div class="challengeLinks">
+            <a href="./day-10/index.html">Demo</a>
+            <a
+              href="https://github.com/melissavi08/javascript-30/tree/main/day-10"
+              >Source</a
+            >
+          </div>
+        </div>
+      </div>
+      <div class="challenge">
+        <img src="./day-11/img/screenshot11.png" alt="day11-screenshot" />
+        <div class="challengeInfo">
+          <h3>Day 11</h3>
+          <p>Custom Video Player</p>
+          <div class="challengeLinks">
+            <a href="./day-11/index.html">Demo</a>
+            <a
+              href="https://github.com/melissavi08/javascript-30/tree/main/day-11"
+              >Source</a
+            >
+          </div>
+        </div>
+      </div>
+      <div class="challenge">
+        <img src="./day-12/img/screenshot12.png" alt="day12-screenshot" />
+        <div class="challengeInfo">
+          <h3>Day 12</h3>
+          <p>Key Sequence Detection</p>
+          <div class="challengeLinks">
+            <a href="./day-12/index.html">Demo</a>
+            <a
+              href="https://github.com/melissavi08/javascript-30/tree/main/day-12"
+              >Source</a
+            >
+          </div>
+        </div>
+      </div>
+      <div class="challenge">
+        <img src="./day-13/img/screenshot13.png" alt="day13-screenshot" />
+        <div class="challengeInfo">
+          <h3>Day 13</h3>
+          <p>Slide in on Scroll</p>
+          <div class="challengeLinks">
+            <a href="./day-13/index.html">Demo</a>
+            <a
+              href="https://github.com/melissavi08/javascript-30/tree/main/day-13"
+              >Source</a
+            >
+          </div>
+        </div>
+      </div>
+      <div class="challenge">
+        <img src="./day-14/img/screenshot14.png" alt="day14-screenshot" />
+        <div class="challengeInfo">
+          <h3>Day 14</h3>
+          <p>References VS Copying</p>
+          <div class="challengeLinks">
+            <a href="./day-14/index.html">Demo</a>
+            <a
+              href="https://github.com/melissavi08/javascript-30/tree/main/day-14"
+              >Source</a
+            >
+          </div>
+        </div>
+      </div>
+      <div class="challenge">
+        <img src="./day-15/img/screenshot15.jpg" alt="day15-screenshot" />
+        <div class="challengeInfo">
+          <h3>Day 15</h3>
+          <p>Local Storage</p>
+          <div class="challengeLinks">
+            <a href="./day-15/index.html">Demo</a>
+            <a
+              href="https://github.com/melissavi08/javascript-30/tree/main/day-15"
+              >Source</a
+            >
+          </div>
+        </div>
+      </div>
+      <div class="challenge">
+        <img src="./day-16/img/screenshot16.jpg" alt="day16-screenshot" />
+        <div class="challengeInfo">
+          <h3>Day 16</h3>
+          <p>Mouse Move Shadow</p>
+          <div class="challengeLinks">
+            <a href="./day-16/index.html">Demo</a>
+            <a
+              href="https://github.com/melissavi08/javascript-30/tree/main/day-16"
+              >Source</a
+            >
+          </div>
+        </div>
+        a>
+      </div>
+      <div class="challenge">
+        <img src="./day-17/img/screenshot17.jpg" alt="day17-screenshot" />
+        <div class="challengeInfo">
+          <h3>Day 17</h3>
+          <p>Sort Without Articles</p>
+          <div class="challengeLinks">
+            <a href="./day-17/index.html">Demo</a>
+            <a
+              href="https://github.com/melissavi08/javascript-30/tree/main/day-17"
+              >Source</a
+            >
+          </div>
+        </div>
+      </div>
       <div class="challenge">
         <a href="https://github.com/melissavi08/javascript-30/tree/main/day-18"
           >Day 18</a
