challenge box from day-18 to day-27

--- a/index.html
+++ b/index.html
@@ -256,23 +256,145 @@
         </div>
       </div>
       <div class="challenge">
-        <a href="https://github.com/melissavi08/javascript-30/tree/main/day-18"
-          >Day 18</a
-        >
+        <img src="./day-18/img/screenshot18.jpg" alt="day18-screenshot" />
+        <div class="challengeInfo">
+          <h3>Day 18</h3>
+          <p>Adding Up Times with Reduce</p>
+          <div class="challengeLinks">
+            <a href="./day-18/index.html">Demo</a>
+            <a
+              href="https://github.com/melissavi08/javascript-30/tree/main/day-18"
+              >Source</a
+            >
+          </div>
+        </div>
       </div>
-      <div class="challenge"><a href="./day-19/index.html">Day 19</a></div>
-      <div class="challenge"><a href="./day-20/index.html">Day 20</a></div>
       <div class="challenge">
-        <a href="https://github.com/melissavi08/javascript-30/tree/main/day-21"
-          >Day 21</a
-        >
+        <img src="./day-19/img/screenshot19.jpg" alt="day19-screenshot" />
+        <div class="challengeInfo">
+          <h3>Day 19</h3>
+          <p>Webcam Fun</p>
+          <div class="challengeLinks">
+            <a href="./day-19/index.html">Demo</a>
+            <a
+              href="https://github.com/melissavi08/javascript-30/tree/main/day-19"
+              >Source</a
+            >
+          </div>
+        </div>
       </div>
-      <div class="challenge"><a href="./day-22/index.html">Day 22</a></div>
-      <div class="challenge"><a href="./day-23/index.html">Day 23</a></div>
-      <div class="challenge"><a href="./day-24/index.html">Day 24</a></div>
-      <div class="challenge"><a href="./day-25/index.html">Day 25</a></div>
-      <div class="challenge"><a href="./day-26/index.html">Day 26</a></div>
-      <div class="challenge"><a href="./day-27/index.html">Day 27</a></div>
+      <div class="challenge">
+        <img src="./day-20/img/screenshot20.jpg" alt="day20-screenshot" />
+        <div class="challengeInfo">
+          <h3>Day 20</h3>
+          <p>Speech Recognition</p>
+          <div class="challengeLinks">
+            <a href="./day-20/index.html">Demo</a>
+            <a
+              href="https://github.com/melissavi08/javascript-30/tree/main/day-20"
+              >Source</a
+            >
+          </div>
+        </div>
+      </div>
+      <div class="challenge">
+        <img src="./day-21/img/screenshot21.jpg" alt="day21-screenshot" />
+        <div class="challengeInfo">
+          <h3>Day 21</h3>
+          <p>Geolocation</p>
+          <div class="challengeLinks">
+            <a href="./day-21/index.html">Demo</a>
+            <a
+              href="https://github.com/melissavi08/javascript-30/tree/main/day-21"
+              >Source</a
+            >
+          </div>
+        </div>
+      </div>
+      <div class="challenge">
+        <img src="./day-22/img/screenshot22.jpg" alt="day22-screenshot" />
+        <div class="challengeInfo">
+          <h3>Day 22</h3>
+          <p>Follow Along Links</p>
+          <div class="challengeLinks">
+            <a href="./day-22/index.html">Demo</a>
+            <a
+              href="https://github.com/melissavi08/javascript-30/tree/main/day-22"
+              >Source</a
+            >
+          </div>
+        </div>
+      </div>
+      <div class="challenge">
+        <img src="./day-23/img/screenshot23.jpg" alt="day23-screenshot" />
+        <div class="challengeInfo">
+          <h3>Day 23</h3>
+          <p>Text-To-Speech</p>
+          <div class="challengeLinks">
+            <a href="./day-23/index.html">Demo</a>
+            <a
+              href="https://github.com/melissavi08/javascript-30/tree/main/day-23"
+              >Source</a
+            >
+          </div>
+        </div>
+      </div>
+      <div class="challenge">
+        <img src="./day-24/img/screenshot24.jpg" alt="day24-screenshot" />
+        <div class="challengeInfo">
+          <h3>Day 24</h3>
+          <p>Sticky Nav</p>
+          <div class="challengeLinks">
+            <a href="./day-24/index.html">Demo</a>
+            <a
+              href="https://github.com/melissavi08/javascript-30/tree/main/day-24"
+              >Source</a
+            >
+          </div>
+        </div>
+      </div>
+      <div class="challenge">
+        <img src="./day-25/img/screenshot25.jpg" alt="day25-screenshot" />
+        <div class="challengeInfo">
+          <h3>Day 25</h3>
+          <p>Propagation and Bubbling</p>
+          <div class="challengeLinks">
+            <a href="./day-25/index.html">Demo</a>
+            <a
+              href="https://github.com/melissavi08/javascript-30/tree/main/day-25"
+              >Source</a
+            >
+          </div>
+        </div>
+      </div>
+      <div class="challenge">
+        <img src="./day-26/img/screenshot26.jpg" alt="day26-screenshot" />
+        <div class="challengeInfo">
+          <h3>Day 26</h3>
+          <p>Stripe Follow</p>
+          <div class="challengeLinks">
+            <a href="./day-26/index.html">Demo</a>
+            <a
+              href="https://github.com/melissavi08/javascript-30/tree/main/day-26"
+              >Source</a
+            >
+          </div>
+        </div>
+      </div>
+      <div class="challenge">
+        <img src="./day-27/img/screenshot27.jpg" alt="day27-screenshot" />
+        <div class="challengeInfo">
+          <h3>Day 27</h3>
+          <p>Click and Drag to Scroll</p>
+          <div class="challengeLinks">
+            <a href="./day-27/index.html">Demo</a>
+            <a
+              href="https://github.com/melissavi08/javascript-30/tree/main/day-27"
+              >Source</a
+            >
+          </div>
+        </div>
+      </div>
       <!--<div class="challenge"><a href="./day-28/index.html">Day 28</a></div>
       <div class="challenge"><a href="./day-29/index.html">Day 29</a></div>
       <div class="challenge"><a href="./day-30/index.html">Day 30</a></div> -->
