screenshot day-12 and day-14 added + html and readme.md day-12, and readme.med day-14 changed

--- a/day-12/index.html
+++ b/day-12/index.html
@@ -3,12 +3,29 @@
   <head>
     <meta charset="UTF-8" />
     <title>Key Detection</title>
+
+    <link rel="preconnect" href="https://fonts.googleapis.com" />
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+    <link
+      href="https://fonts.googleapis.com/css2?family=Patrick+Hand&display=swap"
+      rel="stylesheet"
+    />
+
     <script
       type="text/javascript"
       src="https://www.cornify.com/js/cornify.js"
     ></script>
+
+    <style>
+      h1 {
+        text-align: center;
+        color: deeppink;
+        font-family: "Patrick Hand", cursive;
+      }
+    </style>
   </head>
   <body>
+    <h1>To display unicorns type "melissa"</h1>
     <script src="./script.js"></script>
   </body>
 </html>
