--- a/index.html
+++ b/index.html
@@ -171,7 +171,7 @@
         </div>
       </div>
       <div class="challenge">
-        <img src="./day-12/img/screenshot12.png" alt="day12-screenshot" />
+        <img src="./day-12/img/screenshot12.jpg" alt="day12-screenshot" />
         <div class="challengeInfo">
           <h3>Day 12</h3>
           <p>Key Sequence Detection</p>
