readme-md and challenge box day-28

--- a/index.html
+++ b/index.html
@@ -395,8 +395,21 @@
           </div>
         </div>
       </div>
-      <!--<div class="challenge"><a href="./day-28/index.html">Day 28</a></div>
-      <div class="challenge"><a href="./day-29/index.html">Day 29</a></div>
+      <div class="challenge">
+        <img src="./day-28/img/screenshot28.jpg" alt="day28-screenshot" />
+        <div class="challengeInfo">
+          <h3>Day 28</h3>
+          <p>Video Speed Controller</p>
+          <div class="challengeLinks">
+            <a href="./day-28/index.html">Demo</a>
+            <a
+              href="https://github.com/melissavi08/javascript-30/tree/main/day-28"
+              >Source</a
+            >
+          </div>
+        </div>
+      </div>
+      <!--<div class="challenge"><a href="./day-29/index.html">Day 29</a></div>
       <div class="challenge"><a href="./day-30/index.html">Day 30</a></div> -->
     </section>
   </body>
