challenge box day-29

--- a/index.html
+++ b/index.html
@@ -409,8 +409,21 @@
           </div>
         </div>
       </div>
-      <!--<div class="challenge"><a href="./day-29/index.html">Day 29</a></div>
-      <div class="challenge"><a href="./day-30/index.html">Day 30</a></div> -->
+      <div class="challenge">
+        <img src="./day-29/img/screenshot29.jpg" alt="day29-screenshot" />
+        <div class="challengeInfo">
+          <h3>Day 29</h3>
+          <p>Countdown Timer</p>
+          <div class="challengeLinks">
+            <a href="./day-29/index.html">Demo</a>
+            <a
+              href="https://github.com/melissavi08/javascript-30/tree/main/day-29"
+              >Source</a
+            >
+          </div>
+        </div>
+      </div>
+      <!--<div class="challenge"><a href="./day-30/index.html">Day 30</a></div> -->
     </section>
   </body>
 </html>
