start files day-30

--- a/index.html
+++ b/index.html
@@ -423,7 +423,7 @@
           </div>
         </div>
       </div>
-      <!--<div class="challenge"><a href="./day-30/index.html">Day 30</a></div> -->
+      <div class="challenge"><a href="./day-30/index.html">Day 30</a></div>
     </section>
   </body>
 </html>
