readme.md + challenge box + .js organized day-30

--- a/index.html
+++ b/index.html
@@ -423,7 +423,20 @@
           </div>
         </div>
       </div>
-      <div class="challenge"><a href="./day-30/index.html">Day 30</a></div>
+      <div class="challenge">
+        <img src="./day-30/img/screenshot30.jpg" alt="day30-screenshot" />
+        <div class="challengeInfo">
+          <h3>Day 30</h3>
+          <p>Whack A Mole Game</p>
+          <div class="challengeLinks">
+            <a href="./day-30/index.html">Demo</a>
+            <a
+              href="https://github.com/melissavi08/javascript-30/tree/main/day-30"
+              >Source</a
+            >
+          </div>
+        </div>
+      </div>
     </section>
   </body>
 </html>
