--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
     </header>
     <section class="challengesContainer">
       <div class="challenge">
-        <img src="./day-1/img/screenshot.png" alt="day1-screenshot" />
+        <img src="./day-1/img/screenshot.jpg" alt="day1-screenshot" />
         <div class="challengeInfo">
           <h3>Day 1</h3>
           <p>JavaScript Drum Kit</p>
